--- a/template/base.html
+++ b/template/base.html
@@ -7,7 +7,7 @@
     <title>{{template "title" .}}</title>
 </head>
 <body>
-    <h1>Navbar</h1>
+    <h1>Navbar go routine</h1>
     {{template "content" .}}
 </body>
 </html>
