--- a/template/base.html
+++ b/template/base.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/static/style.css" />
+    
     <title>{{template "title" .}}</title>
 </head>
 <body>
-    <h1>Navbar go routine</h1>
+    <!-- <h1>Navbar</h1> -->
     {{template "content" .}}
 </body>
 </html>
