--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root {
+html {
     /* dark colors */
     --dark-1: #000000;
     --dark-2: #1F1F1F;
@@ -25,6 +25,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: var(--roboto);
 }
 
 body.light {
@@ -44,12 +45,129 @@ body.dark {
     height: max-content;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 1.5em 10em;
-    margin-bottom: 3em;
     box-shadow: 0 0 .4em var(--dark-3);
 }
 
 .logo {
     height: 5em;
 }
+
+/* start carousel style */
+.carousel {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    
+}
+.carousel > .carousel-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: contrast(150%) brightness(30%); 
+    opacity: .3;
+}
+.carousel-img.active {
+    opacity: 1;
+}
+
+.carousel-caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 90%;
+}
+.carousel-title {
+    width: 100%;
+    color: var(--primary-2);
+    font-size: 10rem;
+    background-color: #00000031;
+    text-shadow: 0 0 .4em var(--dark-1),0 0 .4em var(--dark-1);
+    backdrop-filter: blur(20px);
+    padding: 1em 0;
+    border-radius: 1rem;
+    text-align: center;
+    white-space: nowrap;
+    /* border-top: .1em solid var(--primary); */
+    border-bottom: .2em solid var(--primary);
+    box-shadow: 0 0 .4rem var(--primary-1), 0 0 .4rem var(--primary-1);
+    user-select: none;
+}
+@media(max-width: 590px) {
+    .carousel {
+        height: 50vh;
+    }
+    .carousel-title {
+        font-size: 4rem;
+
+    }
+}
+@media(min-width: 591px) {
+    .carousel-title {
+        font-size: 6rem;
+    }
+}
+
+@media(min-width: 700px) {
+    .carousel-title {
+        font-size: 8rem;
+    }
+}
+/* end carousel style */
+
+
+
+/* start main cards style */
+
+.main-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    gap: 20px;
+    padding: 50px;
+    text-align: center;
+}
+@media(max-width: 590px) {
+    .main-cards {
+        padding: 20px;
+    }
+}
+.card-link {
+    text-decoration: none;
+    color: var(--light-1);
+    width: 100%;
+    margin-inline: auto;
+}
+.card-link:hover {
+    color: var(--primary-1) !important;
+}
+
+
+.card {
+    margin-bottom: 2rem;
+    background-color: #00000049;
+    backdrop-filter: blur(10px);
+    /* border: 2px solid #000000d5; */
+    border-radius: .4rem;
+    overflow: hidden;
+    width: 100%;
+    box-shadow: 0 0 .2rem var(--primary-1), 0 0 .2rem var(--primary-1);
+    padding: 1rem;
+    background-color: var(--dark-1);
+    cursor: pointer;
+    scale: 1;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+}
+.card-img {
+    width: 100%;
+}
+
+.card-body {
+    padding: 1rem 0;
+    font-size: 1.6rem;
+}
+/* end main cards style */
