--- a/template/base.html
+++ b/template/base.html
@@ -6,14 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
-
     <title>{{template "title" .}}</title>
 </head>
 
 <body id="content" class="dark">
     {{block "navigation" .}}{{end}}
     {{template "content" .}}
-    <script>
+    <!-- <script>
         var content = document.getElementById("content")
         var mode = localStorage.getItem("mode")
         var dark = true
@@ -30,7 +29,7 @@
                 localStorage.setItem("mode", "dark")
             }
         }
-    </script>
+    </script> -->
 </body>
 
 </html>
