--- a/template/components/carousel.html
+++ b/template/components/carousel.html
@@ -1,18 +1,9 @@
 {{define "carousel"}}
-    <div class="carousel">
-        <div class="barousel-content">
-            <div class="carousel-item">
-                <img src="" alt="" class="carousel-img">
-                <div class="carousel-caption"></div>
-            </div>
-            <div class="carousel-item">
-                <img src="" alt="" class="carousel-img">
-                <div class="carousel-caption"></div>
-            </div>
-            <div class="carousel-item">
-                <img src="" alt="" class="carousel-img">
-                <div class="carousel-caption"></div>
-            </div>
-        </div>
+<div class="carousel">
+    <img src="/static/carousel/1.jpg" alt="" class="carousel-img active">
+    <img src="/static/carousel/2.jpg" alt="" class="carousel-img">
+    <div class="carousel-caption">
+        <h1 class="carousel-title">Groupie Tracker</h1>
     </div>
+</div>
 {{end}}
