--- a/template/pages/home.html
+++ b/template/pages/home.html
@@ -1,14 +1,17 @@
-
 {{define "title"}}Home Page{{end}}
 
 {{define "content"}}
-<h1>Home Page</h1>
-<main class="">
+{{block "carousel" .}}{{end}}
+<main class="main-cards">
     {{range $key,$artist := .}}
-        <a href="/artists/{{$artist.Id}}">
-            <img src="{{$artist.Image}}" alt="" class="">
-            <h3 class="">{{$artist.Name}}</h3>
-        </a>
+    <a class="card-link" href="/artists/{{$artist.Id}}">
+        <div class="card">
+            <img src="{{$artist.Image}}" alt="" class="card-img">
+            <div class="card-body">
+                <h3 class="card-title">{{$artist.Name}}</h3>
+            </div>
+        </div>
+    </a>
     {{end}}
 </main>
 {{end}}
