--- a/template/pages/error.html
+++ b/template/pages/error.html
@@ -1,15 +1,12 @@
-{{define "error"}}
+{{define "style"}}
+<link rel="stylesheet" href="/static/styles.css">
+{{end}}
+{{define "title"}}
+{{.Code}}
+{{end}}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error page</title>
-</head>
-<body>
-    <h1>{{ .Message }} {{ .Code }}</h1>
-    <strong><a href="/">BACK TO HOME PAGE.</a></strong>
-</body>
-</html>
-{{ end }}
+{{define "content"}}
+<main>
+    <h1 style="margin-top: 200px; color: white;">{{.Message}}</h1>
+</main>
+{{end}}
