--- a/template/base.html
+++ b/template/base.html
@@ -10,7 +10,7 @@
     <title>{{template "title" .}}</title>
 </head>
 
-<body id="content" class="dark">
+<body>
     {{block "navigation" .}}{{end}}
     {{template "content" .}}
     {{block "footer" .}}{{end}}
