--- a/template/components/navigation.html
+++ b/template/components/navigation.html
@@ -1,7 +1,9 @@
 {{define "navigation"}}
 <header>
-    <div class="logo-container">
-        <img class="logo" src="/static/Logo.png" alt="Logo">
-      </div>
+  <div class="logo-container">
+    <a href="/">
+      <img class="logo" src="/static/Logo.png" alt="Logo">
+    </a>
+  </div>
 </header>
 {{end}}
