--- a/template/pages/details.html
+++ b/template/pages/details.html
@@ -1,5 +1,5 @@
 {{define "style"}}
-<link rel="stylesheet" href="/static/artist.css">
+<link rel="stylesheet" href="/static/styles/details.css">
 {{end}}
 
 {{define "title"}}
