--- a/template/base.html
+++ b/template/base.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/base.css">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     {{template "style" .}}
 
     <title>{{template "title" .}}</title>
