--- a/template/pages/error.html
+++ b/template/pages/error.html
@@ -1,5 +1,5 @@
 {{define "style"}}
-<link rel="stylesheet" href="/static/styles.css">
+<link rel="stylesheet" href="/static/styles/errors.css">
 {{end}}
 {{define "title"}}
 {{.Code}}
