--- a/template/pages/home.html
+++ b/template/pages/home.html
@@ -1,5 +1,5 @@
 {{define "style"}}
-<link rel="stylesheet" href="/static/styles.css">
+<link rel="stylesheet" href="/static/styles/home.css">
 {{end}}
 {{define "title"}}Music Hub{{end}}
 
