--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -1,3 +1,4 @@
+/* Spotify-inspired colors */
 :root {
     --green: #1db954;
     --black: #000;
@@ -6,11 +7,19 @@
     --scndgray: #121212;
     --lightgray: #D9D9D9;
 }
+  
+body {
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: var(--black);
+    color: var(--white);
+}
+
 main {
     padding: 1em;
     margin-top: 80px; /* Adjusted margin to push content down */
 }
-
 
 .artist-container {
     max-width: 1200px;
@@ -88,11 +97,11 @@ ul {
     list-style-type: none;
     padding: 0;
 }
-/* .artist-members ul, .locations ul {
+.artist-members ul, .locations ul {
     list-style: none;
     padding: 0;
     margin: 0;
-} */
+}
 
 .artist-members li, .locations p, .dates p, .relation li, .creation-date p {
     color: var(--lightgray);
@@ -101,4 +110,16 @@ ul {
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.05);
     text-align: center;
+}
+
+footer {
+    background-color: var(--green);
+    padding: 1em;
+    text-align: center;
+    color: var(--white);
+    margin-top: 50px;
+}
+
+footer p {
+    margin: 0;
 }
