--- a/template/pages/details.html
+++ b/template/pages/details.html
@@ -45,8 +45,10 @@
                         <div class="title">
                             <h2>Locations</h2>
                         </div>
-                        {{range .Locations.Locations}}
-                        <p>{{.}}</p>
+                        {{range $i, $location := .Locations.Locations}}
+                        <a id="anchor" href="https://www.google.com/maps/place/?q=place_id:{{index $.Locations.LocationsIds $i}}">
+                            <p>{{$location}}</p>
+                        </a>
                         {{end}}
                     </div>
                 </div>
