fixed internal server error

--- a/template/pages/details.html
+++ b/template/pages/details.html
@@ -46,9 +46,7 @@
                             <h2>Locations</h2>
                         </div>
                         {{range $i, $location := .Locations.Locations}}
-                        <!-- <a id="anchor" href="https://www.google.com/maps/place/?q=place_id:{{index $.Locations.LocationsIds $i}}"> -->
-                        <a id="anchor" href="https://www.google.com/maps/@{{index $.Locations.LocationsIds $i}}">
-                        
+                        <a id="anchor" href="https://www.google.com/maps/place/{{index $.Locations.LocationsIds $i}}" target="_blank">
                             <p>{{$location}}</p>
                         </a>
                         {{end}}
