added mutex to avoid race condition in updating coordinates map && passing location to the anonymous func

--- a/template/pages/details.html
+++ b/template/pages/details.html
@@ -3,7 +3,7 @@
 {{end}}
 
 {{define "title"}}
-{{.Artists.Name}}
+{{.Artist.Name}}
 {{end}}
 
 {{define "content"}}
@@ -11,10 +11,10 @@
 <main>
     <div class="artist-container">
         <div class="artist-image">
-            <img src="{{.Artists.Image}}" alt="Artist Image">
+            <img src="{{.Artist.Image}}" alt="Artist Image">
         </div>
         <div class="artist-data">
-            <h1 id="artist-name">{{.Artists.Name}}</h1>
+            <h1 id="artist-name">{{.Artist.Name}}</h1>
             <div class="split-container">
                 <div class="info-section left-side">
                     <div class="artist-members">
@@ -22,7 +22,7 @@
                             <h2>Members</h2>
                         </div>
                         <ul>
-                            {{range .Artists.Members}}
+                            {{range .Artist.Members}}
                             <li>{{.}}</li>
                             {{end}}
                         </ul>
@@ -31,7 +31,7 @@
                         <div class="title">
                             <h2>Creation Date</h2>
                         </div>
-                        <p>{{.Artists.CreationDate}}</p>
+                        <p>{{.Artist.CreationDate}}</p>
                     </div>
                     <div class="dates">
                         <div class="title">
@@ -57,7 +57,7 @@
                         <div class="title">
                             <h2>First Album</h2>
                         </div>
-                        <p>{{.Artists.FirstAlbum}}</p>
+                        <p>{{.Artist.FirstAlbum}}</p>
                     </div>
                     <div class="relation">
                         <div class="title">
