--- a/template/components/carousel.html
+++ b/template/components/carousel.html
@@ -2,7 +2,7 @@
 <div class="carousel">
     <img src="/static/images/1.jpg" alt="" class="carousel-img active">
     <div class="carousel-caption">
-        <h1 class="carousel-title">Groupie Tracker</h1>
+        <h1 class="carousel-title">Welcome to your music haven!</h1>
     </div>
 </div>
 {{end}}
